Fixed the alignment of Categories labels

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ body {
 .Category {
   display: flex;
   flex-direction: row;
+  align-items: flex-end;
   justify-content: space-between;
   margin: 20px 30px;
   height: 40px;
